<resources>
    <string name="app_name">BookWorm</string>
    <string name="tbutton1">READING</string>
    <string name="tbutton2">Categories</string>
    <string name="tbutton3">Wish List</string>
    <string name="tbutton4">BOOKS</string>
    <string name="obutton1">DELETE</string>
    <string name="obutton2">ADD</string>

    <string-array name="deleteCat">
        <item>My Fav Category</item>
        <item>2nd fav Category</item>
        <item>Favourite </item>
    </string-array>

    <!--<resources>-->
    <!--<string name="">Recycler Swipe</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="my_cart">My Cart</string>-->
    <!--<string name="delete">DELETE</string>-->
    <!--</resources>-->

    <string-array name="UpdateCat">
        <item>My Fav Category</item>
        <item>2nd fav Category</item>
        <item>Favourite </item>
    </string-array>


    <string name="tV1">Continue Your Reading</string>
    <string name="tV2">Village by the Sea</string>
    <string name="tV3">Fifty Shades of Grey</string>
    <string name="tV4">Baby Got Back</string>
    <string name="tV5">Noob Alliance</string>
    <string name="Atv1">Add the Book You are Reading!</string>
    <string name="Atv2">Name</string>
    <string name="Aet1">Harry Potter</string>
    <string name="Atv3">Author</string>
    <string name="Aet2">J.K.Rowlings</string>
    <string name="Aet3">From</string>
    <string name="Aet4">Till</string>
    <string name="Atv4">Genre</string>
    <string name="Ab1">ADD</string>
    <string name="taddbutton">Add</string>
    <string name="tbuttonDelete">Delete</string>
    <string name="tbuttonUpdate">Update</string>
    <string name="kaviAdd">Add</string>

    <string name="kaviSave">Save</string>
    <string name="Ab3">Suggestions</string>
    <string name="Atv">Books you may like</string>
    <string name="atv2">Book Name</string>
    <string name="abtn3">BUY</string>
    <string name="Abtn">Village by the Sea</string>
    <string name="Abtn4">OK</string>
    <string name="Abtn3">EDIT</string>

    <string name="tbooktv1">Books</string>
    <string name="ttv1">The Longest Ride</string>
    <string name="ttv2">Harry Potter</string>
    <string name="ttv3">The Hobbit</string>
    <string name="ttv4">Add New Book</string>
    <string name="ttn1">Title</string>
    <string name="ttin3" />
    <string name="ttin4" />
    <string name="ttin5" />
    <string name="ttv10">Add Category</string>
    <string name="ttv11">Enter Category Name</string>
    <string name="ttin6" />
    <string name="tbtn1">Add</string>
    <string name="ttin7" />
    <string name="ttin8" />
    <string name="Aet6" />
    <string name="ttv12">Add To Wishlist</string>
    <string name="ttv14">Categories</string>
    <string name="ttv17">A Game of Thrones is the first novel in A Song of Ice and Fire, a series of fantasy novels by the American author George R. R. Martin. It was first published on August 1, 1996. The novel won the 1997 Locus Award[2] and was nominated for both the 1997 Nebula Award[2] and the 1997 World Fantasy Award.[3] The novella Blood of the Dragon, comprising the Daenerys Targaryen chapters from the novel, won the 1997 Hugo Award for Best Novella. In January 2011, the novel became a New York Times Bestseller[4] and reached #1 on the list in July 2011.[5]</string>
    <string name="ttv18">Delete Category</string>
    <string name="ttv19">Select a Category</string>
    <string name="tbtn5">Delete</string>
    <string name="ttv20">Village by the Sea</string>
    <string name="ttv21">From</string>
    <string name="ttv22">Till</string>
    <string name="ttv23">Pages Left</string>
    <string name="ttv24">12/01/2019</string>
    <string name="ttv25">20/01/2019</string>
    <string name="ttv26">101</string>
    <string name="ttv30">The Longest Ride</string>
    <string name="ttv31" />
    <string name="tbuttonupdatereview">Update</string>
    <string name="ttv32">The Longest Ride</string>
    <string name="ttv33">After being trapped in an isolated car crash, the life of elderly widower Ira Levinson becomes entwined with a young college student, Sophia Danko, and the cowboy whom she loves, a young man named Luke Collins. The novel is told through the perspectives of these three characters as they go through their lives, both separately and together.</string>
    <string name="ttv35">Marvel Comics 2019</string>
    <string name="ttv36">2100.00</string>
    <string name="ttin10" />
    <string name="ttv40">Wishlist</string>
    <string name="ttv41">Marvel Comics 2019</string>
    <string name="ttv42">Nayana Mal Gasa</string>
    <string name="ttv43">Uyanna Igenaganna</string>
    <string name="Kedit">EDIT</string>
    <string name="Kdone">DONE</string>
    <string name="DeletebtnOsa">Delete</string>
    <string name="updatebtnosa">Update</string>
    <string name="updateTextOsa">Update Category</string>
    <string name="textSeletOsa">Select Category to Update</string>
    <string name="btnUpdateOsa">Update</string>
    <string name="osaUpdateText" />
    <string name="AedG" />
    <string name="Edit">Edit</string>
    <string name="txtFrom" />
    <string name="txtTill" />
    <string name="TVRname">Name</string>
    <string name="osaBtnUpdate">Update</string>
    <string name="osabtnDelete" />
    <string name="osabtnDelete2">Delete</string>
    <string name="Book_title">Text</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="price">Price</string>
    <string name="titlefeild">TITLE</string>
    <string name="authorfeild">AUTHOR</string>
    <string name="pricefeilld">Price</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Counter">Days Left :</string>
    <string name="countertv" />

    <string-array name="cat_cat">
        <item>Maths</item>
        <item>Comic</item>
        <item>Cooking</item>
        <item>Children</item>
        <item>Law</item>
        <item>Novel</item>
        <item>Travel</item>
        <item>Philosophy</item>
    </string-array>
    >

</resources>
